--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@
 #main_uzor_top{padding:0px;width:648px;height:1095px;background:url(../images/main_uzory_top.png) no-repeat right top}
 #main_uzor_bottom{padding:0px 40px 0px 0px;width:608px;height:1095px;background:url(../images/main_uzory_bot.png) no-repeat right bottom}
 
-#content{width:auto;height:1000px}
+#content{width:630px;height:1000px}
 .breadcrumbs{padding:20px 0px 0px 0px;height:20px}
 .breadcrumbs a{color:#e7c650;font:16px MyriadProLight;text-decoration:none}
 .breadcrumbs a:hover{color:#e7c650;font:16px MyriadProLight;text-decoration:underline;background:#d5a400}
@@ -48,7 +48,7 @@
 /* XXX .image{width:280px;height:220px}*/
 #leftuzor{width:185px;height:56px;background:url(../images/leftuzor.png) no-repeat bottom right;float:left}
 #previous{padding:30px 0px 0px 0px;width:90px;height:26px;float:left}
-#previous a,#next a{text-decoration:none;font:12px MyriadProBoldSemiExt;color:#fbf7c7}
+#previous a,#next a, a.view-all{text-decoration:none;font:12px MyriadProBoldSemiExt;color:#fbf7c7}
 #numbers{padding:20px 5px 0px 5px;width:100px;height:auto;float:left;text-align:center}
 #numbers a{display:block;padding:10px 0px 0px 0px;margin:0px;height:auto;text-decoration:none;font:20px MyriadProBoldSemiExt;float:left;color:#fbf7c7}
 #numbers a.current{display:block;padding:10px 0px 0px 0px;margin:0px;height:auto;text-decoration:none;font:20px MyriadProBoldSemiExt;float:left;color: #fbf7c7}
@@ -144,4 +144,8 @@ ul.thumbnails li {
     position: absolute;
     right: 0;
     top: 0;
+}
+
+.inner-content {
+  height: 1050px;
 }
