Added image processing and static content

--- a/app/views/common/product_by_type.haml
+++ b/app/views/common/product_by_type.haml
@@ -25,9 +25,10 @@
   Цена: 
   = product_price @product
 #order
-  %a#add{:href => "#"}
+  %a#add{:href => populate_orders_url }
     Добавить
     %br/
     в карзину
   %a{:href => "#"}
     %img{:alt => "", :src => "/images/order.png"}/
+= image_tag @product.images.last.attachment.url(:product_list_watermarked2)
