--- a/app/views/common/production_by_manufacturer.haml
+++ b/app/views/common/production_by_manufacturer.haml
@@ -1,5 +1,8 @@
 - content_for :body_class do 
-  servizy
+  proizvoditel
+#text
+  Императорский фарфоровый завод &mdash; одно из старейших в Европе, первое и одно из крупнейших в России предприятий по производству художественных фарфоровых изделий. Расположен в Санкт-Петербурге.
+  (!)
 - if @products.empty?
   Нет продуктов для данного производителя 
 - else
