--- a/app/views/layouts/spree_application.html.erb
+++ b/app/views/layouts/spree_application.html.erb
@@ -51,7 +51,7 @@ end
                 <ul id="first">
                 	<li><a href="<%= root_path %>">на главную</a></li>
                 	<li><a href="#">новинки в продаже (!)</a></li>
-                    <li><a href="proizvoditel.html">статьи о продукции (!)</a></li>
+                    <li><a href="<%= articles_path %>">статьи о продукции</a></li>
                     <li><a href="<%= cart_path %>">корзина</a></li>
                 	<li><a href="#">доставка и оплата</a></li>
                 </ul>
