--- a/app/views/layouts/spree_application.html.erb
+++ b/app/views/layouts/spree_application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <link rel="stylesheet" type="text/css" href="/css/style.css"/>
-<!--[if IE 6]><script src="scripts/DD_belatedPNG.js"></script>
+<!--[if IE 6]><script src="/scripts/DD_belatedPNG.js"></script>
 <script language="javascript" type="text/javascript">
 DD_belatedPNG.fix('body,div,img,li,a,select,input,ul,h1');
 </script><![endif]-->
@@ -96,6 +96,6 @@ end
             </div> 
         </div>
     </div>
-	<script type="text/javascript" src="scripts/gradient.js"></script>
+	<script type="text/javascript" src="/scripts/gradient.js"></script>
 </body>
 </html>
