--- a/app/views/common/production_by_manufacturer_and_type.haml
+++ b/app/views/common/production_by_manufacturer_and_type.haml
@@ -7,6 +7,8 @@
     .fotoblock{ :class => cycle('','secondcol') }
       .name
         = product.name
+        .clear
+        = product_price product
       .image
         %a{:href => product_by_manufacturer_and_type_path(@manufacturer.name, @type.name, product.id) }
           = display_product_image_for_list product
