--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@
 #leftuzor{width:185px;height:56px;background:url(../images/leftuzor.png) no-repeat bottom right;float:left}
 #previous{padding:30px 0px 0px 0px;width:90px;height:26px;float:left}
 #previous a,#next a, a.view-all{text-decoration:none;font:12px MyriadProBoldSemiExt;color:#fbf7c7}
-#numbers{padding:20px 5px 0px 5px;width:100px;height:auto;float:left;text-align:center}
+#numbers{padding:20px 5px 0px 5px;width:100px;height:26px;float:left;text-align:center}
 #numbers a{display:block;padding:10px 0px 0px 0px;margin:0px;height:auto;text-decoration:none;font:20px MyriadProBoldSemiExt;float:left;color:#fbf7c7}
 #numbers a.current{display:block;padding:10px 0px 0px 0px;margin:0px;height:auto;text-decoration:none;font:20px MyriadProBoldSemiExt;float:left;color: #fbf7c7}
 #numbers table td{border:0}
