--- a/app/views/_search_pagination.haml
+++ b/app/views/_search_pagination.haml
@@ -1,7 +1,7 @@
 #leftuzor
 #previous
   - if true || previous_page
-    - link_to url_for(:page => previous_page) do 
+    - link_to products_path(:keywords => params[:keywords], :page => previous_page) do 
       Предыдущая&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       %br>/
       страница
@@ -18,10 +18,10 @@
           - if i == current_page
             = link_to i, '#', :class => 'current'
           - else
-            = link_to i, url_for(:page => i)
+            = link_to i, products_path(:keywords => params[:keywords], :page => i)
 #next
   - if next_page
-    - link_to url_for(:page => next_page) do
+    - link_to products_path(:keywords => params[:keywords], :page => next_page) do
       Следующая&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       %br>/
       страница
@@ -31,6 +31,3 @@
       %br>/
       страница
 #rightuzor
-.clear
-%div{:style => "text-align: center;padding-top:3px"} 
-  = link_to 'Показать товары со всех страниц', url_for(:page => 'all'), :class => 'view-all'
