--- a/app/views/checkout/edit.html.erb
+++ b/app/views/checkout/edit.html.erb
@@ -1,12 +1,26 @@
+<% Breadcrumbs.set_controller @controller %>
+<% Breadcrumbs.add_main.add_ordering %>
 <% content_for :head do %>
   <%= javascript_include_tag 'jquery.validate.min' %>
   <%= javascript_include_tag  'checkout', '/states' %>
 <% end %>
 <div id="checkout">
-  <h1><%= t("checkout")%></h1>
-  <%= checkout_progress %>
   <br clear="left" />
-  <%= render "shared/error_messages", :target => @order %>
+
+  <% # Code taken from app/views/shared/_error_messages.html.erb %>
+  <% target = @order %>
+  <% if target && target.errors.any? %>
+    <div id="errorExplanation" class="errorExplanation">
+      <h2><%= t(:errors_prohibited_this_record_from_being_saved, :count => target.errors.count) %>:</h2>
+      <p><%= t(:there_were_problems_with_the_following_fields) %>:</p>
+       <ul>
+       <% target.ship_address.errors.full_messages.each do |msg| %>
+         <li><%= msg %></li>
+       <% end %>
+       </ul>
+    </div>
+  <% end %>
+
   <%= hook :checkout_summary_box do %>
     <div id="checkout-summary">
       <%= render 'summary', :order => @order %>
