--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -25,7 +25,7 @@
           <h3><%= "#{t("subtotal")}: #{order_price(@order)}" %></h3>
           <div class="links">
             <%= link_to image_tag('/images/update.png') + t("update"), '#', :class => 'button checkout primary', :onclick => "$('form#updatecart').submit(); return false;" %>
-            <%= link_to image_tag('/images/checkout.png') + t("checkout"), checkout_path, :class => 'button checkout primary' %>
+            <%= link_to image_tag('/images/checkout.png') + t("checkout"), checkout_state_path('address'), :class => 'button checkout primary' %>
           </div>
         </div>
 
