--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -24,7 +24,7 @@
 
           <h3 style="float:right"><%= "#{t("subtotal")}: #{order_price(@order)}" %></h3>
           <div class="clear"></div>
-        <div id="subtotal" style="background-color:#D42A2A;padding:10px;width:100%">
+        <div id="subtotal" style="padding:10px;width:100%">
           <div class="links">
             <input type="button" value="Пересчитать" onclick="$('form#updatecart').submit(); return false;" /> * (используйте для обновления количества товаров)
             <br/>
