--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -37,10 +37,10 @@
   <% end %>
   
         <div class="clear"></div>
-        <div style="float:left;margin-left:150px">
+        <div class="checkout">
           <% link_to checkout_state_path('address'), :style => "display:block;" do %>
           <%= image_tag('/images/cart.png', :align => "left") %>
-          <div style="font-size:36px;font-weight:bold;float:left;padding-top:20px;">Оформить<br/> заказ !</div>
+          <div class="checkout-text">Оформить<br/> заказ!</div>
         <% end %>
         </div>
 
