Changed contact info

--- a/app/views/layouts/spree_application.html.erb
+++ b/app/views/layouts/spree_application.html.erb
@@ -36,14 +36,9 @@ end
         <div id="main">
 	        <div id="main_l"></div>
 	        <div id="menu">
-            	<div id="contacts">
-                г. Одесса,<br/>
-				ул. Толбухина, 135,<br/>
-				ТЦ "МегаДом",<br/>
-				центральный ряд,<br/>
-				маг. №25-с,<br/>
-				тел.: 743-53-75
-                </div>
+              <div id="contacts" style="padding-top:40px">Телефоны для заказа<br/>
+                +38 (096) 215-92-72<br/>
+                +38 (048) 743 68 06</div>
                 <ul id="first">
                 	<li><a href="<%= root_path %>">на главную</a></li>
                 	<li><a href="#">новинки в продаже (!)</a></li>
