--- a/app/views/common/production_by_manufacturer.haml
+++ b/app/views/common/production_by_manufacturer.haml
@@ -1,8 +1,7 @@
 - content_for :body_class do 
   proizvoditel
 #text
-  Императорский фарфоровый завод &mdash; одно из старейших в Европе, первое и одно из крупнейших в России предприятий по производству художественных фарфоровых изделий. Расположен в Санкт-Петербурге.
-  (!)
+  = @taxon.description
   .clear
 - if @products.empty?
   %div
