Fixed link at bottom

--- a/app/views/layouts/spree_application.html.erb
+++ b/app/views/layouts/spree_application.html.erb
@@ -45,6 +45,7 @@ end
                     <li><a href="<%= articles_path %>">статьи о продукции</a></li>
                     <li><%= link_to_cart 'корзина' %></li>
                 	<li><a href="/dostavka">доставка и оплата</a></li>
+                	<li><a href="/contacts">контакты</a></li>
                 </ul>
 				<div id="search">
 	                <form name="search" method="get" action="<%= products_path %>">
@@ -90,7 +91,7 @@ end
         <div id="footer">
         	<div id="footer_l">
             &copy; 2011 ТМ «Званый обед»<br/>
-			<a href="#">www.diner-gala.com.ua</a>
+			<a href="http://www.gala-dinner.com.ua">www.gala-dinner.com.ua</a>
             </div> 
         	<div id="footer_r">
 ТМ «Званый обед» является официально зарегистрированной торговой маркой.<br/>
