--- a/app/views/common/production_by_manufacturer.haml
+++ b/app/views/common/production_by_manufacturer.haml
@@ -1,28 +1,27 @@
 - content_for :body_class do 
   proizvoditel
-.servizy
-  #text
-    = @taxon.description
-    .clear
-  - if @products.empty?
-    %div
-      Нет продуктов для данного производителя 
+- # This code also gives us @categories variable
+- content_for :left_menu do
+  = render :partial => '/left_menu_for_manufacturer', :manufacturer => @taxon
+- @products = @categories.children.paginate(:per_page => 6, :page => params[:page])
+#text
+  = @taxon.description
+  .clear
+- if @products.empty?
+  %div
+    Нет продуктов для данного производителя 
+- else
+  - @products.each do |product|
+    .fotoblock{ :class => cycle('','secondcol') }
+      .name
+        = product.name
+      .image
+        %a{:href => by_manufacturer_and_type_path(@taxon.name, product.name) }
+          = image_tag product.icon.url
+  - if @products.respond_to? :total_pages
+    - paginate_items @products
   - else
-    - @products.each do |product|
-      .fotoblock{ :class => cycle('','secondcol') }
-        .name
-          = product.name
-          .clear
-          = product_price product
-        .image
-          %a{:href => product_by_manufacturer_path(@taxon.name, product.id) }
-            = display_product_image_for_list product
-    - if @products.respond_to? :total_pages
-      - paginate_items @products
-    - else
-      - content_for :main_uzor_bottom do 
-        :plain
-          style="overflow-y: scroll"
+    - content_for :main_uzor_bottom do 
+      :plain
+        style="overflow-y: scroll"
 
-  - content_for :left_menu do
-    = render :partial => '/left_menu_for_manufacturer', :manufacturer => @taxon
